<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/btnLanguege"
        android:icon="@drawable/ic_language"
        android:titleCondensed="20sp"
        android:title="@string/language" />
    <item
        android:id="@+id/btnShare"
        android:icon="@drawable/ic_share"
        android:titleCondensed="20sp"
        android:title="@string/share" />
    <item
        android:id="@+id/btnRate"
        android:icon="@drawable/ic_rate"
        android:titleCondensed="20sp"
        android:title="@string/rate_us" />
    <item
        android:id="@+id/btnPolicy"
        android:icon="@drawable/ic_privacy"
        android:titleCondensed="20sp"
        android:title="@string/setting_policy" />
    <item
        android:titleCondensed="20sp"
        android:title="@null" />


</menu>