<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="@drawable/bg_radius_8"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_lock_screen"
            android:textSize="16sp"
            android:textColor="#5B93FF"
            android:gravity="center"
            android:fontFamily="@font/calibri"
            android:textFontWeight="400"
            android:paddingVertical="12dp"
            android:text="@string/lock_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:background="#F0F0F3"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_home_screen"
            android:textSize="16sp"
            android:textColor="#5B93FF"
            android:gravity="center"
            android:fontFamily="@font/calibri"
            android:textFontWeight="400"
            android:paddingVertical="12dp"
            android:text="@string/home_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:background="#F0F0F3"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_home_and_lock_screen"
            android:textSize="16sp"
            android:textColor="#5B93FF"
            android:gravity="center"
            android:fontFamily="@font/calibri"
            android:textFontWeight="400"
            android:paddingVertical="12dp"
            android:text="@string/home_and_lock_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_cancel"
        android:textSize="16sp"
        android:textColor="#5B93FF"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/calibri"
        android:background="@drawable/bg_radius_8"
        android:backgroundTint="@color/white"
        android:paddingVertical="12dp"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>
