<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/permistion"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardElevation="@dimen/_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_volume"
                    android:layout_width="68dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/volume"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_waring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center"
                    android:lineHeight="28dp"
                    android:text="@string/title_warning"
                    android:textColor="#0E0D35"
                    android:textFontWeight="700"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/img_volume">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text1_waring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center"
                    android:lineHeight="18dp"
                    android:text="@string/text_warning"
                    android:textColor="#565672"
                    android:textFontWeight="400"
                    android:textSize="14dp"
                    app:layout_constraintTop_toBottomOf="@id/title_waring">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text2_waring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="88dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center"
                    android:lineHeight="18dp"
                    android:text="@string/text1_warning"
                    android:textColor="#565672"
                    android:textFontWeight="400"
                    android:textSize="14dp"
                    app:layout_constraintTop_toBottomOf="@id/text1_waring">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/got_it"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginVertical="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_btn_warning"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text2_waring">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_waring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/calibri"
                        android:lineHeight="@dimen/_18sdp"
                        android:text="@string/text_btn_warning"
                        android:textColor="@color/white"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_14sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/check_warning"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.appcompat.widget.AppCompatTextView>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/check_warning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/check_warning"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.appcompat.widget.AppCompatImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>