<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_border_rate"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_face_rate"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/smiling_face_with_heart_eyes">

            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/figtree_semibold"
                android:text="@string/title_rate"
                android:textColor="#09170F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/desc_rate"
                android:textAlignment="center"
                android:textColor="#09170F" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star_fill" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star2"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star_fill" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star3"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star_fill" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star4"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star_fill" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star5"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star_fill" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_rate_us"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_border_btn_rate"
                android:fontFamily="@font/figtree_semibold"
                android:gravity="center"
                android:text="@string/rate_us"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close_pop_up"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_close_popup">

        </androidx.appcompat.widget.AppCompatImageView>
    </RelativeLayout>



</layout>
